feat: construido tabela para listar collection-items e ajustados filtros e paginacao

--- a/src/app/shared/components/sidenav/sidenav.component.scss
+++ b/src/app/shared/components/sidenav/sidenav.component.scss
@@ -22,4 +22,6 @@
   justify-content: space-between;
   border-bottom: 0.5px solid #ccc;
   box-shadow: 0px 0px 5px black;
+  background-color: #1F252A;
+
 }
