--- a/src/app/collection-items/collection-items.component.html
+++ b/src/app/collection-items/collection-items.component.html
@@ -1,1 +1,90 @@
-tabela aqui
+<div class="body">
+  <div class="title">
+    <h1>Minha coleção</h1>
+  </div>
+  <mat-card>
+    <mat-form-field class="input-full" appearance="outline">
+      <mat-label>Filtro global</mat-label>
+      <input
+        type="text"
+        matInput
+        (keyup)="filter.next($any($event).target.value)"
+        matTooltip="Filtre todos os campos"
+        class="input-full"
+      />
+    </mat-form-field>
+    <mat-form-field class="input-full" appearance="outline">
+      <mat-label>Tipo</mat-label>
+      <mat-select [(value)]="type" (selectionChange)="loadCollectionItems()">
+        <mat-option> TODOS </mat-option>
+        <mat-option value="1"> BOOK </mat-option>
+        <mat-option value="2"> DVD </mat-option>
+        <mat-option value="3"> CD </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field class="input-full" appearance="outline">
+      <mat-label>Status</mat-label>
+      <mat-select [(value)]="status" (selectionChange)="loadCollectionItems()">
+        <mat-option> TODOS </mat-option>
+        <mat-option value="1"> AVAILABLE </mat-option>
+        <mat-option value="2"> UNAVAILABLE </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </mat-card>
+
+  <table class="table" mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef>Título</th>
+      <td mat-cell *matCellDef="let element" [matTooltip]="element.title">
+        {{ printTitle(element.title) }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="autor">
+      <th mat-header-cell *matHeaderCellDef>Autor</th>
+      <td mat-cell *matCellDef="let element">{{ element.autor }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="quantity">
+      <th style="width: 80px" mat-header-cell *matHeaderCellDef>Quantidade</th>
+      <td style="width: 80px" mat-cell *matCellDef="let element">
+        {{ element.quantity }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="edition">
+      <th mat-header-cell *matHeaderCellDef>Edição</th>
+      <td mat-cell *matCellDef="let element">{{ element.edition }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="itemType">
+      <th mat-header-cell *matHeaderCellDef>Tipo</th>
+      <td mat-cell *matCellDef="let element">
+        {{ printType(element.itemType) }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef>Status</th>
+      <td mat-cell *matCellDef="let element">
+        {{ printStatus(element.status) }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="location">
+      <th mat-header-cell *matHeaderCellDef>Localização</th>
+      <td mat-cell *matCellDef="let element">{{ element.location }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+  <mat-paginator
+    [pageSize]="5"
+    [pageSizeOptions]="[5, 10]"
+    aria-label="Select page"
+    (page)="loadCollectionItems($event)"
+    #paginator
+  >
+  </mat-paginator>
+</div>
