--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,28 +1,51 @@
 
 // Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-// Plus imports for other components in your app.
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$fit-dash-primary: mat.define-palette(mat.$purple-palette,700);
+$primary-palette: (
+    50 : #e0f5ed,
+    100 : #b3e5d2,
+    200 : #80d4b4,
+    300 : #4dc295,
+    400 : #26b57f,
+    500 : #00a868,
+    600 : #00a060,
+    700 : #009755,
+    800 : #008d4b,
+    900 : #007d3a,
+    A100 : #aaffca,
+    A200 : #77ffab,
+    A400 : #44ff8b,
+    A700 : #2aff7c,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+
+$fit-dash-primary: mat.define-palette($primary-palette, 700);
 $fit-dash-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
-// The warn palette is optional (defaults to red).
 $fit-dash-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
 $fit-dash-theme: mat.define-light-theme((
   color: (
-    primary: $fit-dash-primary,
+    primary:$fit-dash-primary,
     accent: $fit-dash-accent,
     warn: $fit-dash-warn,
   )
@@ -37,3 +60,6 @@ $fit-dash-theme: mat.define-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* For use in src/lib/core/theming/_palette.scss */
+
