--- a/src/app/collection-items/collection-items.component.html
+++ b/src/app/collection-items/collection-items.component.html
@@ -2,6 +2,7 @@
   <div class="title">
     <h1>Minha coleção</h1>
   </div>
+
   <mat-card>
     <mat-form-field class="input-full" appearance="outline">
       <mat-label>Filtro global</mat-label>
@@ -32,40 +33,48 @@
     </mat-form-field>
   </mat-card>
 
-  <table class="table" mat-table [dataSource]="dataSource">
+  <table
+    class="table"
+    mat-table
+    [dataSource]="dataSource"
+    matSort
+    (matSortChange)="sortChange($event)"
+  >
     <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef>Título</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Título</th>
       <td mat-cell *matCellDef="let element" [matTooltip]="element.title">
         {{ printTitle(element.title) }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="autor">
-      <th mat-header-cell *matHeaderCellDef>Autor</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Autor</th>
       <td mat-cell *matCellDef="let element">{{ element.autor }}</td>
     </ng-container>
 
     <ng-container matColumnDef="quantity">
-      <th style="width: 80px" mat-header-cell *matHeaderCellDef>Quantidade</th>
+      <th style="width: 80px" mat-header-cell *matHeaderCellDef mat-sort-header>
+        Quantidade
+      </th>
       <td style="width: 80px" mat-cell *matCellDef="let element">
         {{ element.quantity }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="edition">
-      <th mat-header-cell *matHeaderCellDef>Edição</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Edição</th>
       <td mat-cell *matCellDef="let element">{{ element.edition }}</td>
     </ng-container>
 
     <ng-container matColumnDef="itemType">
-      <th mat-header-cell *matHeaderCellDef>Tipo</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo</th>
       <td mat-cell *matCellDef="let element">
         {{ printType(element.itemType) }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef>Status</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
       <td mat-cell *matCellDef="let element">
         {{ printStatus(element.status) }}
       </td>
