--- a/src/app/collection-items/collection-items.component.html
+++ b/src/app/collection-items/collection-items.component.html
@@ -76,13 +76,34 @@
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
       <td mat-cell *matCellDef="let element">
-        {{ printStatus(element.status) }}
+        <span [class]="'status-' + printStatus(element.status)">
+          {{ printStatus(element.status) }}
+        </span>
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="location">
-      <th mat-header-cell *matHeaderCellDef>Localização</th>
-      <td mat-cell *matCellDef="let element">{{ element.location }}</td>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Ações:</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu" xPosition="before">
+          <button
+            mat-menu-item
+            *ngIf="element.locationId"
+            (click)="showLocation(element.locationId)"
+          >
+            Ver localização
+          </button>
+          <button mat-menu-item *ngIf="iCanLend(element.status)">
+            Emprestar
+          </button>
+          <button mat-menu-item *ngIf="!element.locationId">
+            Adicionar Localização
+          </button>
+        </mat-menu>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
