feat: criando modulo de localizacoes

--- a/src/app/collection-items/collection-items.component.html
+++ b/src/app/collection-items/collection-items.component.html
@@ -96,7 +96,11 @@
           >
             Ver localização
           </button>
-          <button mat-menu-item *ngIf="iCanLend(element.status)">
+          <button
+            mat-menu-item
+            *ngIf="iCanLend(element.status)"
+            (click)="landCollectionItem(element.id)"
+          >
             Emprestar
           </button>
           <button mat-menu-item *ngIf="!element.locationId">
