--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -11,8 +11,7 @@
     <mat-divider></mat-divider>
     <mat-nav-list>
       <a mat-list-item routerLink="collection-items">Minha Coleção</a>
-      <a mat-list-item href="#">Localizações</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="locations">Localizações</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -29,7 +28,7 @@
         </button>
       </div>
       <div>
-        <app-avatar username="Jonathan Amaral"></app-avatar>
+        <app-avatar username="John Doe"></app-avatar>
       </div>
     </mat-toolbar>
     <ng-content> </ng-content>
