--- a/src/app/collection-items/contact-lookup-table/contact-lookup-table.component.scss
+++ b/src/app/collection-items/contact-lookup-table/contact-lookup-table.component.scss
@@ -1,6 +1,10 @@
 .body {
     width: 100%;
-
+    div {
+        .input-full{
+            width: 100%;
+        }
+    }
     table {
         width: 100%;
     }
