--- a/src/app/locations/location.component.html
+++ b/src/app/locations/location.component.html
@@ -1,11 +1,17 @@
 <div class="container">
-  <div><h1>Árvore de localizações</h1></div>
-  <div class="row justify-content-end p-3">
+  <div class="container-title">
+    <h1 class="title">Árvore de localizações</h1>
+  </div>
+  <div class="container-button-create">
     <button mat-raised-button color="primary" (click)="createNewRoot()">
       Cadastrar nova localização
     </button>
   </div>
-  <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+  <mat-tree
+    class="container-tree"
+    [dataSource]="dataSource"
+    [treeControl]="treeControl"
+  >
     <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
       <button mat-icon-button disabled></button>
       {{ node.initials }}
