--- a/src/app/collection-items/collection-items.component.html
+++ b/src/app/collection-items/collection-items.component.html
@@ -2,11 +2,15 @@
   <div class="title">
     <h1>Minha coleção</h1>
   </div>
+
   <div class="container-button">
     <div>
-      <button mat-raised-button color="primary">Cadastrar Item</button>
+      <button mat-raised-button color="primary" (click)="createOrUpdate()">
+        Cadastrar Item
+      </button>
     </div>
   </div>
+
   <mat-card>
     <mat-form-field class="input-full" appearance="outline">
       <mat-label>Filtro global</mat-label>
@@ -113,6 +117,13 @@
             (click)="setLocation(element.id)"
           >
             Adicionar Localização
+          </button>
+          <button
+            mat-menu-item
+            *ngIf="element.contacts?.length > 0"
+            (click)="seeLoans(element.contacts)"
+          >
+            Visualizar empréstimos
           </button>
         </mat-menu>
       </td>
