--- a/src/app/collection-items/create-collection-item/create-collection-item.component.html
+++ b/src/app/collection-items/create-collection-item/create-collection-item.component.html
@@ -1,1 +1,67 @@
-<p>create-collection-item works!</p>
+<div class="body">
+  <h1 class="title">{{ title }}</h1>
+  <form [formGroup]="form">
+    <div class="row">
+      <mat-form-field class="input-full">
+        <mat-label>Título:</mat-label>
+        <input type="text" matInput formControlName="title" />
+        <mat-error *ngIf="form.get('title')?.hasError('title')">
+          Insira um title válido!
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div class="row">
+      <mat-form-field class="input-full">
+        <mat-label>Autor:</mat-label>
+        <input type="text" matInput formControlName="autor" />
+        <mat-error *ngIf="form.get('autor')?.hasError('autor')">
+          Insira um autor válido!
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <mat-form-field class="input-full">
+          <mat-label>Edição:</mat-label>
+          <input type="text" matInput formControlName="edition" />
+          <mat-error *ngIf="form.get('edition')?.hasError('edition')">
+            Insira um edition válido!
+          </mat-error>
+        </mat-form-field>
+      </div>
+      <div class="col">
+        <mat-form-field class="input-full">
+          <mat-label>Quantidade:</mat-label>
+          <input type="number" matInput formControlName="quantity" />
+          <mat-error *ngIf="form.get('quantity')?.hasError('quantity')">
+            Quantidade deve ser maior do que 1.
+          </mat-error>
+          <div></div>
+        </mat-form-field>
+      </div>
+    </div>
+    <div class="row">
+      <mat-form-field class="input-full" appearance="outline">
+        <mat-label>Tipo</mat-label>
+        <mat-select formControlName="itemType">
+          <mat-option value="1"> BOOK </mat-option>
+          <mat-option value="2"> DVD </mat-option>
+          <mat-option value="3"> CD </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="container-button">
+      <button mat-button (click)="close()">Fechar</button>
+      <button
+        [disabled]="form.invalid"
+        mat-raised-button
+        color="primary"
+        (click)="save()"
+      >
+        Salvar
+      </button>
+    </div>
+  </form>
+</div>
